# znaju

./: LICENSE  pyproject.toml
migrations/: env.py
migrations/versions/: 2025_02_14_1555-9e2a47c90ee2_initial_version.py
src/: main.py
src/api/: routers.py
src/api/endpoints/: user.py
src/core/: base.py  config.py  db.py  user.py
src/core/MODELS/: base.py  users.py
src/models/: user.py
src/schemas/: user.py
src/static/css/: reset.css  style.css
src/static/js/: script.js
src/templates/: start.html  start_informatika.html
